fix debugbar for website with high z-index (like bootstrap)

--- a/tgext/debugbar/statics/style.css
+++ b/tgext/debugbar/statics/style.css
@@ -3,7 +3,7 @@
 }
 
 #tgdb_debugbar #tgdb_button {
-	z-index: 999;
+	z-index: 9999;
 	width: 40px;
 	height: 36px;
 	border-bottom-right-radius: 15px;
@@ -25,7 +25,7 @@
 	position: fixed;
 	background-color: rgba(0, 0, 0, 0.6);
 	color: #D3D3D3;
-	z-index: 998;
+	z-index: 9998;
 }
 
 #tgdb_debugbar .tgdb_section {
@@ -49,7 +49,7 @@
 }
 
 #tgdb_debugbar .tgdb_content {
-	z-index: 998;
+	z-index: 9998;
 	color: #000;
 	display: none;
 	width: 100%;
